Support `--add-opens` in addition to `--add-exports`